crates/velme-syntax/tests/snapshots/parser__golden_reject@boolean_operators_dangling.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/boolean_operators_dangling.velme
---
[
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect the end of the line here — I was looking for an expression.",
    "severity": "error",
    "span": [
      143,
      143
    ]
  },
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect the end of the line here — I was looking for an expression.",
    "severity": "error",
    "span": [
      159,
      159
    ]
  },
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect the end of the line here — I was looking for an expression.",
    "severity": "error",
    "span": [
      173,
      173
    ]
  }
]
