crates/velme-syntax/tests/snapshots/parser__golden_reject@budget_item_unit_elsewhere.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/budget_item_unit_elsewhere.velme
---
[
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect the end of the line here — I was looking for `=`.",
    "severity": "error",
    "span": [
      136,
      136
    ]
  },
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `s` here — I was looking for `.`, `and`, `is`, `or` or the end of the line.",
    "severity": "error",
    "span": [
      182,
      183
    ]
  }
]
