crates/velme-syntax/tests/snapshots/parser__golden_reject@call_block_result_not_last.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/call_block_result_not_last.velme
---
[
  {
    "code": "VL0101",
    "help": "rename this binding, or move it to the end of `call:`",
    "message": "`result` can only name the last binding.",
    "severity": "error",
    "span": [
      164,
      170
    ]
  },
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `Score` here — I was looking for `=`.",
    "severity": "error",
    "span": [
      261,
      266
    ]
  }
]
