crates/velme-syntax/tests/snapshots/parser__golden_reject@check_item_no_dash.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/check_item_no_dash.velme
---
[
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `result` here — I was looking for `-`.",
    "severity": "error",
    "span": [
      140,
      146
    ]
  },
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect the end of the indented block here — I was looking for an indented line.",
    "severity": "error",
    "span": [
      218,
      218
    ]
  }
]
