crates/velme-syntax/tests/snapshots/parser__golden_reject@examples_bad.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/examples_bad.velme
---
[
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `=` here — I was looking for `==`.",
    "severity": "error",
    "span": [
      186,
      187
    ]
  },
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `+` here — I was looking for `)` or `,`.",
    "severity": "error",
    "span": [
      204,
      205
    ]
  }
]
